$Id$

		If you feel lucky then try this version, if not just wait
		a few days so that I fix the destructive bugs that might
		be present in this version.


v0.51.2		06-Mar-2004

	upgrade:
		Before upgrade announce all new files!
		Compile all programs.
		Close the system with mbstat close.
		Install programs as root (as usual).
		Start mbsetup, this can take a while on a system with lots of
		files, during startup the files database will be converted.
		After the menu appears, you may exit mbsetup.
		Open the system again.
		If you want you may restart mbtask.

	general:
		Updated to a new files database structure that allows for
		expanding the records like most other databases to allow new
		features.
		Removed all references to costsharing for ticfiles which wasn't
		fully implemented.

	mbcico:
		Updated file request function to new files database structure.
		Fixed a compile problem on FreeBSD 5.1

	mbfido:
		When removing files during tic import due to replace or maximum
		files, thumbnails are now also removed from disk.
		Updated tic file import function to the new files database
		structure.

	mbfile:
		Updated kill, index, check, pack, list, adopt, import, move,
		delete and sort to the new files database structure.
		The file delete function in kill didn't delete the thumbnail.
		The mbfile del and undel commands accept wildcards in the 
		filename.
		Fixed an error in check when a mangled 8.3 filename was changed
		and the symbolic link was not adjusted.
		Added rearc command.
		The check command does now also check if the magic alias file
		request names are valid and removes the invalid entries.

	mbaff:
		When scanning for uploads, files which were hatched now have
		the right tic area name instead of AREA n in the announce
		record. They also contain the used magic filename if this is
		known.
		The scan for new uploads function is updated to the new files
		database structure.
		The filefind function is updated to the new files database